@@ -6,7 +6,8 @@
 #
 [tox]
 #envlist = flake8, py{36,27}-{linux,macos}, coverage-macos
-envlist = flake8, py{37,36,27}-{linux,macos}, coverage-macos
+#envlist = flake8, py{37,36,27}-{linux,macos}, coverage-macos
+envlist = py{27}-{linux,macos}
 
 #
 skip_missing_interpreters = True
